--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "author": "Ahmad Ihsan",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.0.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.5.1"
   },
   "devDependencies": {
