--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Ahmad Ihsan",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-core": "^3.0.1",
     "apollo-server-express": "^3.0.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
